# end_to_end_scheduler

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/agents/: plant-scheduler-reviewer.md  scheduler-code-reviewer.md  scheduler-output-reviewer.md
V1/: __init__.py
V1/config/: __init__.py  constants.py  enums.py  halt_codes.py  pilot.yaml  settings.py
V1/models/: __init__.py  demand.py  diagnostics.py  event.py  feasibility.py  finding.py  kpi.py  lot.py  reservation.py  routing.py  schedule.py
V1/reports/: __init__.py  writer_audit.py  writer_bom_graph.py  writer_dag.py  writer_diagnostics.py  writer_excel.py  writer_gantt.py  writer_kpi.py  writer_reservation_log.py  writer_schedule.py
V1/routes/: __init__.py  audit.py  backward_feasibility.py  demand_explosion.py  diagnostics.py  forward_scheduler.py  graph_construction.py  kpi.py  lot_sizing.py  time_calculation.py  visualisation.py
V1/setups/: __init__.py  bootstrap.py  cli.py  guardrails.py  run_context.py  t0_compute.py
V1/utilities/: __init__.py  bom_walker.py  event_heap.py  fefo.py  lot_id.py  lsf_tiebreak.py  machine_parser.py  reservation_table.py  time_math.py  unit_conversion.py
docs/: Agentic_Workflow_Proforma_Faizan 1.docx  BTP_V1_Proforma_AnmolSaini.docx  build_documentation_pdf.py  build_proforma.py  methodology.md
input/: BTP_PCR_May_Curing_Schedule.csv  BTP_Routing_1325216614081STMX0 BOM_Final (1).xlsx  Ideal_ForwardSchedule.xlsx  curing_schedule_30k_170presses_1day.xlsx
testing/: __init__.py  run_30k_39_building.py
tests/: conftest.py
tests/unit/: test_kpi.py  (+21 more)
(+44 files in other folders)
